--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,49 @@
-version: "3.7"
+# For more information: https://laravel.com/docs/sail
+version: '3'
 services:
-    mysql:
-        container_name: tech_talk_mysql
+    laravel.test:
+        build:
+            context: ./docker/8.0
+            dockerfile: Dockerfile
+            args:
+                WWWGROUP: '${WWWGROUP}'
+        image: sail-8.0/app
+        extra_hosts:
+            - 'host.docker.internal:host-gateway'
+        ports:
+            - '${APP_PORT:-80}:80'
         environment:
-            MYSQL_DATABASE: tech_talk
-            MYSQL_PASSWORD: admin
-            MYSQL_ROOT_PASSWORD: admin
-            MYSQL_USER: admin
-        image: "mariadb:10.4"
-        ports:
-            - "3306:3306"
+            WWWUSER: '${WWWUSER}'
+            LARAVEL_SAIL: 1
+            XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
+            XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
         volumes:
-            - ./docker/volumes/mysql:/var/lib/mysql:consistent
+            - '.:/var/www/html'
         networks:
-            api:
-                ipv4_address: 10.0.0.10
-    php:
-        build: ./docker/dockerfiles/php
-        container_name: tech_talk_php
+            - sail
         depends_on:
             - mysql
-        volumes:
-            - ./:/var/www:delegated
-        networks:
-            - api
-    api:
-        container_name: tech_talk_nginx
-        depends_on:
-            - mysql
-            - php
-        image: "nginx:latest"
+    mysql:
+        image: 'mysql:8.0'
         ports:
-            - "80:80"
+            - '${FORWARD_DB_PORT:-3306}:3306'
+        environment:
+            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_DATABASE: '${DB_DATABASE}'
+            MYSQL_USER: '${DB_USERNAME}'
+            MYSQL_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
         volumes:
-            - ./:/var/www:delegated
-            - ./docker/conf/nginx/site.conf:/etc/nginx/conf.d/default.conf:delegated
+            - 'sailmysql:/var/lib/mysql'
         networks:
-            - api
+            - sail
+        healthcheck:
+          test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
+          retries: 3
+          timeout: 5s
 networks:
-    api:
-        name: tech_talk_network
+    sail:
         driver: bridge
-        ipam:
-            config:
-                - subnet: 10.0.0.0/16
+volumes:
+    sailmysql:
+        driver: local
