--- a/.ebextensions/environment.config
+++ b/.ebextensions/environment.config
@@ -6,6 +6,11 @@ files:
         content: |
             upload_max_filesize = 100M
             post_max_size = 100M
+option_settings:
+    aws:elasticbeanstalk:container:php:phpini:
+        document_root: /public
+    aws:elasticbeanstalk:environment:process:default:
+        HealthCheckPath: /health-check
 container_commands:
     01-migration:
         command: "php artisan migrate --force"
